--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
+MONGO_URI=mongodb+srv://balajiwork289:cj9O7tQ1fefm7q5p@cluster0.wqbur.mongodb.net/movie_time
+?retryWrites=true&w=majority&appName=Cluster0
 PORT=5001 
