--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
     "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^5.0.0"
   }
 }
