Implemented Login with Auth
MT-2

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://balajiwork289:cj9O7tQ1fefm7q5p@cluster0.wqbur.mongodb.net/movie_time
 ?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=movie-time@serverRun
 PORT=5001 
