--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
+NODE_ENV=production
 MONGO_URI=mongodb+srv://balajiwork289:cj9O7tQ1fefm7q5p@cluster0.wqbur.mongodb.net/movie_time
 ?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=movie-time@serverRun
+JWT_EXPIRES_IN=3600
 PORT=5001 
